fix: corrects stats on home page spacing

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -97,7 +97,7 @@
     }
 
   }
-
+  
   .quality-performance {
     text-align: center;
     padding-top: 130px;
@@ -105,7 +105,7 @@
 
     .quality-stats {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: center;
       align-items: center;
     }
   }
